<resources>
    <string name="app_name">Remote Telegram Client</string>
    <string name="code">Code:</string>
    <string name="phone_number">Phone number:</string>
    <string name="server_client_id" translatable="false">565708888148-m61c48f4sq3vo8b1sdd2mgj9f67lhr4q.apps.googleusercontent.com</string>
    <string name="sign_out">Sign out</string>
    <string name="next_button">Next</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="sync">Sync</string>
</resources>
