<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#030303">

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:textColor="#FF4000" />

    <RelativeLayout android:id="@+id/RelativeLayout02"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:ems="10"
            android:maxLength="15"
            android:layout_centerInParent="true"
            android:hint="@string/enter_your_phone"
            android:inputType="phone"
            android:textColor="#FF4000"
            android:background="@drawable/rounded_edittext"
            tools:targetApi="o" />
    </RelativeLayout>

    <RelativeLayout android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <Button
            android:id="@+id/button_send_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_button"
            android:onClick="onClick"
            android:text="@string/next_button" />
    </RelativeLayout>

</LinearLayout>